# ytffmpeg

./: .gitignore  AGENTS.md  README.md  pyproject.toml  setup.cfg  setup.py
.cursor/: rules
.github/workflows/: publish.yml
CryptoTalk/: TOC.md
CryptoTalk/Crypto-is-not-a-Scam/: readme.md
CryptoTalk/math-is-a-drag/: Makefile.config.json
CryptoTalk/monerod-p2pool-xmrig/: Makefile.config.json  c  monerod-p2pool-xmrig.html  readme.html  readme.md
CryptoTalk/talks/: stablecoins
LinuxFromTheGroundUp/: TOC.md
LinuxFromTheGroundUp/bash/: TOC.md
LinuxFromTheGroundUp/how-to-ssh/: TOC.md
LinuxFromTheGroundUp/package-manager/: TOC.md
Markizano-Draconus/: why-altrish.srt
Markizano-Draconus/name/: VID_20231119_142717933.srt
analytics/: Last 58 days.csv  tiktok-all.csv
blog/2021-12-19_pulseaudio/: pulseaudio.md
blog/Kizano-LT/: Makefile.config.json  NakedTruth-001.kdenlive  README.md
blog/Markizano.NET/: ModernProblemsInAWorldOfToday.md  slavery-is-a-learned-behaviour.md
cam/majik/: anatomy-of-a-ward.md
contrib/sysvinit/: QUICKSTART.md  README.md  install.sh  mkzforge  mkzforge.default  uninstall.sh  ytffmpeg  ytffmpeg.default
doc/: WEBSERVER.md  architecture.dia  configuration.md  whisper.help.txt
etc/: config.yml
events/TBRU27/: Makefile.config.json
fintech/_linux/: TOC.md
fintech/misc/: _video-improvements.srt  helium-explainer.txt  technical-acronyms.srt
influential/AI-is-scary/: Makefile.config.json
influential/circles-and-angles/: Emerald Tablets of Thoth [sgjXps8NjmE].srt  Stop Chasing Happiness： Master The Psychology Of Pleasure, Power & Success Instead ｜ Arthur Brooks [B8O6aTHBBTY].srt
influential/finalfantasyguy88/: Makefile.config.json
influential/humanity-how-do-we-raise-our-baby/: Makefile.config.json
influential/i-dont-fit-in-a-box/: Makefile.config.json
influential/market-response_2023-05-15/: Makefile.config.json
lib/mkzforge/: __init__.py  __main__.py  const.py  (+10 more)
musings/: i-live-with-purpose.md
tests/: runtests.py  whisper-model.py
web/: app.js  index.html  project-detail.html  projects.html  style.css
yaba/: Makefile.config.json
(+275 files in other folders)
